--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "homepage": "https://shadowzee123.github.io/get-a-job",
+
   "name": "get-a-job",
   "version": "1.0.0",
   "private": true,
@@ -11,6 +13,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+"deploy": "gh-pages -d build",
+
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
