--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
+
 {
   "homepage": "https://shadowzee123.github.io/get-a-job",
-
+  "description": "A React application to help users find job opportunities.",
+  "keywords": [
+    "react",
+    "job",
+    "opportunities",
+    "employment"
+  ],
   "name": "get-a-job",
   "version": "1.0.0",
   "private": true,
@@ -14,8 +21,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "predeploy": "npm run build",
-"deploy": "gh-pages -d build",
-
+    "deploy": "gh-pages -d build",
+    "prestart": "npm install",
+    "prebuild": "npm install",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -30,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
