--- a/package.json
+++ b/package.json
@@ -1,4 +1,14 @@
 {
+  "description": "A React application to help users find job opportunities.",
+  "keywords": [
+    "react",
+    "job",
+    "opportunities",
+    "employment"
+  ],
+ 
+  "homepage": "https://shadowzee123.github.io/get-a-job",
+
   "name": "get-a-job",
   "version": "1.0.0",
   "private": true,
@@ -9,11 +19,11 @@
     "react-scripts": "5.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+  "start": "react-scripts start",
+  "build": "react-scripts build",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d build"
+},
   "browserslist": {
     "production": [
       ">0.2%",
@@ -25,5 +35,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
